# KataFish

./: .SPRT  .accumulator_stats  .gitignore  .stats  CMakeLists.txt  Makefile  README.md  SPRT.md  bbc  bbc.cpp
include/: Attacks.hpp  Board.hpp  Common.hpp  Engine.hpp  Eval.hpp  Move.hpp  MoveOrder.hpp  Movegen.hpp  Perft.hpp  Position.hpp  Search.hpp  TT.hpp  UCI.hpp  misc.hpp  nn.hpp  nnue.hpp
raw-engine/: bbc.cpp
src/: Attacks.cpp  Board.cpp  Common.cpp  Engine.cpp  Eval.cpp  Move.cpp  MoveOrder.cpp  Movegen.cpp  Position.cpp  Search.cpp  TT.cpp  UCI.cpp  bbc.cpp  main.cpp  misc.cpp  nn.cpp  nnue.cpp
